tried to revert back to old versions to fix horizontal scroll bar issue. Did not work. set back to last github push

--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,7 @@ body {
   scroll-snap-align: start;
   scroll-snap-stop: always;
   height: 100vh;
+  width: 100vw;
 }
 
 .section-image-mobile {
@@ -563,17 +564,17 @@ body {
 }
 
 .section-image-narrow {
-  width: 600px;
-  max-width: 80vw;
-  margin-bottom: -165px;
-  opacity: 50%;
-  z-index: -1;
+  width: 100%;
+  margin-bottom: -55px;
+  opacity: 70%;
+  z-index: -5;
+  position: relative;
 }
 
 .section-image-wide {
-  width: 800px;
-  margin-bottom: -165px;
-  opacity: 50%;
+  width: 700px;
+  margin-bottom: -125px;
+  opacity: 70%;
   z-index: -1;
 }
 
@@ -600,6 +601,7 @@ body {
   text-align: center;
   text-transform: uppercase;
   width: 100%;
+  z-index: 99;
   transition: letter-spacing 0.5s cubic-bezier(0.75, 0, 0.36, 1), color 0.3s ease;
 }
 .section-text-container h1:hover {
@@ -632,12 +634,17 @@ body {
 
 .two-column-container {
   display: flex;
+  justify-content: center;
+  align-items: center;
   -moz-column-count: 2;
        column-count: 2;
 }
 
 .left-column {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-right: 20px;
 }
 
@@ -648,13 +655,18 @@ body {
 @media (max-width: 480px) {
   .section-image-mobile {
     display: block;
-    width: 80vw;
+    margin-top: 90px;
     margin-bottom: -105px;
     opacity: 50%;
     z-index: -1;
   }
+  .section-container {
+    height: -moz-fit-content;
+    height: fit-content;
+  }
   .section-image-narrow {
-    margin-bottom: -105px;
+    margin: 80px 0 0 0;
+    max-width: 100%;
   }
   .section-image-wide {
     display: none;
@@ -675,7 +687,6 @@ body {
     width: -moz-fit-content;
     width: fit-content;
     font-weight: 500;
-    margin-bottom: 30px;
     -moz-column-count: 1;
          column-count: 1;
   }
@@ -871,8 +882,24 @@ header {
   border: 1px solid aquamarine;
 }
 
+.contact-text-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .contact-text-container p {
   text-align: center;
+}
+
+.contact-icon-wrapper {
+  width: 50px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+#section1 {
+  width: 100vw;
 }
 
 .hero-wrapper {
@@ -880,6 +907,7 @@ header {
   align-items: center;
   justify-content: center;
   flex-direction: row;
+  width: 100vw;
 }
 
 .right-hero {
@@ -887,7 +915,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 40vw;
+  width: 497px;
   height: 100%;
 }
 
@@ -898,9 +926,11 @@ header {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 40vw;
+  width: -moz-fit-content;
+  width: fit-content;
   height: 100vh;
   z-index: 1;
+  margin-right: 20px;
 }
 
 .hero-text-container {
@@ -974,10 +1004,18 @@ header {
   z-index: 1;
 }
 
+.hero-color-palette {
+  margin-top: 120px;
+}
+
 .dot-grid {
   height: 750px;
   position: absolute;
   z-index: -2;
+  background-color: var(--color-cream);
+  border: 2px solid;
+  overflow: hidden;
+  border-radius: 15px;
 }
 
 @media (max-width: 480px) {
@@ -997,6 +1035,7 @@ header {
     width: 90vw;
     height: -moz-fit-content;
     height: fit-content;
+    margin: 0;
   }
   .hero-text-container {
     height: -moz-fit-content;
@@ -1023,6 +1062,9 @@ header {
     display: flex;
     align-items: center;
   }
+  .right-hero {
+    width: 395px;
+  }
   .hero-text-container {
     height: -moz-fit-content;
     height: fit-content;
@@ -1044,6 +1086,9 @@ header {
   .hero-portrait-border {
     margin-top: 4vh;
   }
+  .color-palette-wrapper {
+    margin-top: 200px;
+  }
 }
 .projects-wrapper {
   margin-top: 30px;
@@ -1057,9 +1102,9 @@ header {
 .project {
   height: 300px;
   width: 200px;
-  border: 1px solid var(--color-medium-blue);
+  border: 1px solid;
   border-radius: 15px;
-  background-color: var(--color-yellow);
+  background-color: var(--color-cream);
   transition: scale 0.3s ease-in-out;
   display: flex;
   justify-content: center;
@@ -1095,25 +1140,67 @@ header {
   }
 }
 .right-column {
-  border: 2px solid;
+  border: solid 2px;
   border-radius: 10px;
+  overflow: hidden;
+  color: var(--black);
 }
 .right-column h3 {
   border: solid;
   border-width: 2px 0;
   padding: 10px;
-  background-color: var(--color-light-blue);
+  background-color: var(--color-beige);
+  letter-spacing: 4px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
 }
 .right-column h3:first-child {
-  border-radius: 10px 10px 0 0;
   padding: 10px;
   border: solid;
   border-width: 0 0 2px 0;
 }
 .right-column p {
   padding: 15px;
+  background-color: var(--color-cream);
 }
 
+.skills-keyword-wrapper {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 60px;
+  flex-wrap: wrap;
+  width: 70%;
+  height: -moz-fit-content;
+  height: fit-content;
+  z-index: 99;
+}
+
+.keyword-container {
+  align-items: center;
+  border-radius: 20px;
+  border: solid 2px;
+  cursor: crosshair;
+  display: flex;
+  margin: 5px;
+  height: 40px;
+  justify-content: center;
+  overflow: hidden;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.keyword-text {
+  opacity: 1;
+  padding: 7px;
+  text-align: center;
+  font-weight: 700;
+}
+
+@media (max-width: 480px) {
+  .skills-keyword-wrapper {
+    margin: 40px 0;
+  }
+}
 @keyframes slideIn {
   0% {
     transform: translateY(-140%);
